syntax = "proto3";

package dom.user.v1;

option go_package = "github.com/dom/user/api/dom/user/v1";

service UserService {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
